Fix API101 migration and hardware feature visibility